# blog_automation

./: .env.example  README.md  RUNBOOK.md  metadata.json  package-lock.json  package.json  pytest.ini  server.ts
content_os/: README.md  pyproject.toml  requirements-lock.txt
content_os/app/: main.py  schemas.py
content_os/app/ads/: ads_txt.py  dom_utils.py  experiment.py  linter.py
content_os/app/api/: routes_ingest.py  routes_ops.py  routes_publish.py  routes_queue.py  routes_track.py
content_os/app/eval/: compliance.py  disclosure.py  similarity.py
content_os/app/pipeline/: alt_text.py  image_seo.py  keyframes.py  unique_pack.py
content_os/app/publish/: content_queue_state.py  naver_package.py  queue.py  state_machine.py  wordpress.py
content_os/app/qa/: compliance.py  fixplan.py  gate.py  templates.py
content_os/app/refresh/: content_refresh.py  detector.py  update_pack.py
content_os/app/rules/: base.py  catalog.py  compliance_rules.v1.yaml  en_rules.py  ko_rules.py
content_os/scripts/: apply_disclosures.py  build_internal_links.py  build_store_pack.py  build_tracking_link.py  build_unique_pack.py  check_one.py  export_metrics.py  generate_merchant_assets.py  generate_ops_dashboard.py  import_affiliate_links.py  index_existing.py  lint_html.py  manage_ads_txt.py  manage_indexing_feeds.py  monitor_cwv.py  render_jsonld.py  run_naver_checklist.py  run_refresh.py  run_seo_checklist.py  summarize_brandstore_stats.py  sync_commerce_ssot.py  sync_my_store.py  sync_partner_products.py  sync_unified_products.py  validate_internal_links.py
src/: App.tsx  (+1 more)
(+120 files in other folders)
